--- a/core/templates/core/header.html
+++ b/core/templates/core/header.html
@@ -1,11 +1,11 @@
 {% load static %}
 
+<!-- This is the header, in order words the navigation bar of our website.
+     It is extended to all the pages. -->
 <div class = "row header">
-
-    <!-- Completed the logo should not go in the media directory because that's for uploaded images and is .gitignored -->
-    <!-- Completed please put logo in core/static/images :) -->
     <a href="{% url 'index' %}"><img id="logo" src="{% static 'images/Logo1.jpg' %}"></a>
 
+    <!-- Search Bar -->
     <div class="searchbar_container">
         <form action="{% url 'search' %}" method="get">
             {% csrf_token %}
@@ -21,74 +21,37 @@
         </form>
     </div>
 
+    <!-- Drop down BROWSE button. The cells and the content that populates the dropdown menu is
+         generated with python in category_table.py-->
     <div id = "browse_button_main_container">
         <div class=" browse_button_container dropdown dropdown-menu-right">
             <a href="#" class="btn btn-primary dropdown-toggle browse_button" data-toggle="dropdown">Browse</a>
             {{ category_table.render|safe }}
-{#            <table class="dropdown-menu-right dropdown-menu">#}
-{#                <tr>#}
-{#                    <th class = "dropdown_category_text">Country</th>#}
-{#                    <th class = "dropdown_category_text">Meat Lover</th>#}
-{#                    <th class = "dropdown_category_text">Drinks</th>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <td><a class = "menu_item" href="#">Turkey</a></td>#}
-{#                    <td><a class = "menu_item" href="#">Chicken</a></td>#}
-{#                    <td><a class = "menu_item" href="#">Smoothies</a></td>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <td><a class = "menu_item"  href="#">China</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Steak</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Alcoholic</a></td>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <td><a class = "menu_item"  href="#">United States</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Fish</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Soft</a></td>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <th class = "dropdown_category_text">Vegetarian</th>#}
-{#                    <th class = "dropdown_category_text">Dessert</th>#}
-{#                    <th class = "dropdown_category_text">Vegan</th>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <td><a class = "menu_item" href="#">Cheesy</a></td>#}
-{#                    <td><a class = "menu_item" href="#">Cakes</a></td>#}
-{#                    <td><a class = "menu_item" href="#">Legumes</a></td>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <td><a class = "menu_item"  href="#">Salads</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Pie</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Whole Grains</a></td>#}
-{#                </tr>#}
-{#                <tr>#}
-{#                    <td><a class = "menu_item"  href="#">Soup</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Cold</a></td>#}
-{#                    <td><a class = "menu_item"  href="#">Fruit</a></td>#}
-{#                </tr>#}
-{##}
-{#                <!--- the bottom tr code is not useful other than adding a blank row ---->#}
-{#                <tr>#}
-{#                    <td><a style="color: white">-</a></td>#}
-{#                </tr>#}
-{##}
-{#            </table>#}
         </div>
     </div>
 
+    <!-- Link to the Ingredient Search section of our site-->
     <a href="{% url 'ingredient_search' %}" class="header-link">Ingredient search</a>
 
+    <!-- The code below displays Login and Signup button if user is not logged it
+         If the user is logged in then it shows a button that takes up the the recipes
+         submission page. Attached to that is a button that displays the users name and it's
+         also a dropdown menu that give the user some navigation options that are specific to users-->
     <span class="btn-group login_signup_buttons_container" role="group">
         {% if not request.user.is_authenticated %}
+
+            <!-- Loging and Signup bottuns that dirrect users to their respective pages-->
             <a href="{% url 'login' %}" role="button" class="btn btn-primary login_signup_buttons">Log in</a>
             <a href="{% url 'signup' %}" role="button" class="btn btn-secondary login_signup_buttons">Sign up</a>
         {% else %}
 
+            <!--Submit Button aka the PLUS  -->
             <a class="btn btn-secondary login_signup_buttons"   href="{% url 'submit_recipe' %}">
                 <span class="oi oi-plus"></span>
             </a>
             <div class=" btn btn-primary login_signup_buttons pull-right dropdown ">
 
+            <!-- Drop downmenu with user profile navigation options -->
               <a href="#" class="dropdown-toggle" id = "my_account_button" data-toggle="dropdown" role="button" aria-expanded="false">
                     {{ request.user.username }}
               </a>
